fixing strategy session z-index bug w/ the new sub-header

--- a/assets/scss/pages/strategy-session.scss
+++ b/assets/scss/pages/strategy-session.scss
@@ -93,7 +93,7 @@
 
   .signup-form {
     position: relative;
-    z-index: 100;
+    z-index: 90;
     margin-top: -26px;
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(2, 8, 20, 0.1), 0px 8px 16px rgba(2, 8, 20, 0.08);
